--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="conteudo">
             <div class="botoes">
                 <button class="botao ativo">Meu aniversaio</button>
-                <button class="botao">Tirar carteira</button>
+                <button class="botao">Tirar carteira de motorista</button>
                 <button class="botao">Conseguir a faculdade</button>
                 <button class="botao"></button>
             </div>
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Passar em agronomia</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -86,8 +86,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Trabalhar</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">Ganhar meu dinheiro</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias3"></p>
