--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <button class="botao ativo">Meu aniversaio</button>
                 <button class="botao">Tirar carteira de motorista</button>
                 <button class="botao">Conseguir a faculdade</button>
-                <button class="botao"></button>
+                <button class="botao">conseguir um emprego</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
@@ -35,7 +35,7 @@
                             <p class="contador-digito-numero" id="minutos0"></p>
                             <p class="contador-digito-texto">minutos</p>
                         </div>
-                        <div class="contador-digito">
+                        <div class="contador-digito">Tempo para completar o objetivo
                             <p class="contador-digito-numero" id="segundos0"></p>
                             <p class="contador-digito-texto">segundos</p>
                         </div>
@@ -56,7 +56,7 @@
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="minutos1"></p>
                             <p class="contador-digito-texto">minutos</p>
-                        </div>
+                        </div>Tempo para completar o objetivo
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="segundos1"></p>
                             <p class="contador-digito-texto">segundos</p>
