--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <h2 class="titulo-principal">Meus Objetivos do Ano<span>_</span></h2>
         <div class="conteudo">
             <div class="botoes">
-                <button class="botao ativo">Meu aniversaio</button>
+                <button class="botao ativo">Ter uma caminhonete</button>
                 <button class="botao">Tirar carteira de motorista</button>
                 <button class="botao">Conseguir a faculdade</button>
                 <button class="botao">conseguir um emprego</button>
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal"> Ter uma Caminhonete</h3>
+                    <h3 class="aba-conteudo-titulo-principal">dia do meu aniversaio</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo pra bruta chegar</h4>
                     <div class="contador">
                         <div class="contador-digito">
