--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="minutos1"></p>
                             <p class="contador-digito-texto">minutos</p>
-                        </div>Tempo para completar o objetivo
+                        </div>
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="segundos1"></p>
                             <p class="contador-digito-texto">segundos</p>
