--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <p class="contador-digito-numero" id="minutos0"></p>
                             <p class="contador-digito-texto">minutos</p>
                         </div>
-                        <div class="contador-digito">Tempo para completar o objetivo
+                        <div class="contador-digito">
                             <p class="contador-digito-numero" id="segundos0"></p>
                             <p class="contador-digito-texto">segundos</p>
                         </div>
