--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="abas-textos">
                 <div class="aba-conteudo ativo">
-                    <h3 class="aba-conteudo-titulo-principal">dia do meu aniversaio</h3>
+                    <h3 class="aba-conteudo-titulo-principal">Dia do meu aniversario</h3>
                     <h4 class="aba-conteudo-titulo-secundario">Tempo pra bruta chegar</h4>
                     <div class="contador">
                         <div class="contador-digito">
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">final do ano</h3>
+                    <h3 class="aba-conteudo-titulo-principal">final de ano</h3>
                     <h4 class="aba-conteudo-titulo-secundario"></h4>
                     <div class="contador">
                         <div class="contador-digito">
