--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     </div>
                 </div>
                 <div class="aba-conteudo">
-                    <h3 class="aba-conteudo-titulo-principal">final de ano</h3>
-                    <h4 class="aba-conteudo-titulo-secundario">Viajar</h4>
+                    <h3 class="aba-conteudo-titulo-principal">Começo do ano que vem</h3>
+                    <h4 class="aba-conteudo-titulo-secundario">dois meses depois do meu aniversario</h4>
                     <div class="contador">
                         <div class="contador-digito">
                             <p class="contador-digito-numero" id="dias1"></p>
